--- a/C#A4_WF/C#A4_WF.csproj
+++ b/C#A4_WF/C#A4_WF.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>C_A4_WF</RootNamespace>
     <Nullable>enable</Nullable>
